fixed alignment issues

--- a/src/scripts/modules/media/body/content-baked.less
+++ b/src/scripts/modules/media/body/content-baked.less
@@ -220,6 +220,16 @@ h1.example-title .text {
   }
 }
 
+
+//
+// MathJax_Display override
+// --------------------------------------------------
+.MathJax_Display {
+  width: auto !important;
+  float: left !important;
+  margin: 0px;
+}
+
 // Tables
 // --------------------------------------------------
 .os-table {
@@ -229,6 +239,7 @@ h1.example-title .text {
     tr {
       td {
         vertical-align: middle;
+        padding: 1em 0em;
       }
     }
   }
@@ -312,3 +323,4 @@ h1.example-title .text {
 .appendix [data-type="list"] {
   margin-top: 1rem;
 }
+
